<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="170dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start_msgTop"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="30dp">
        </TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_msgLogin"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/S_login">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register_msgRegister"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:id="@+id/S_register">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>